--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -3,13 +3,28 @@
         <a class="navbar-brand" href="{{ path('app_homepage') }}">Accueil</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
                 aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">Menu</span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExample07">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_product_index') }}">Liste des produits</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Liste des Utilisateurs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Créer Catégorie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Créer Tags</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Créer un compte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Se connecter</a>
                 </li>
             </ul>
         </div>
