--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -16,6 +16,24 @@
                             <p class="card-text">{{ product.description | slice(0,100) }}</p>
                             <a href="{{ path('app_product_show', {slug: product.slug}) }}"
                                class="card-link btn btn-outline-info">Détail</a>
+
+
+
+                        <div class="btn-group">
+
+
+                            <a href="{{ path('app_product_show', {slug: product.slug}) }}" class="card-link btn btn-outline-info">Détail</a>
+                            <a href="{{ path('app_product_update', {slug: product.slug}) }}" class="card-link btn btn-outline-warning">Modifier</a>
+                            {% endif %}
+                            {% if is_granted('ROLE_MODERATEUR') %}
+                                <a href="{{ path('app_product_delete', {slug: product.slug}) }}" class="card-link btn btn-outline-danger">Supprimer</a>
+                            {% endif %}
+                        </div>
+
+
+
+
+
                         </div>
                     </div>
                 </div>
