--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -14,6 +14,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ product.name }}</h5>
                             <p class="card-text">{{ product.description | slice(0,100) }}</p>
+                            <p class="text-muted">Publié par {{ product.publisher.email }}</p>
                             <a href="{{ path('app_product_show', {slug: product.slug}) }}"
                                class="card-link btn btn-outline-info">Détail</a>
 
@@ -21,17 +22,14 @@
 
                         <div class="btn-group">
 
-
                             <a href="{{ path('app_product_show', {slug: product.slug}) }}" class="card-link btn btn-outline-info">Détail</a>
-                            <a href="{{ path('app_product_update', {slug: product.slug}) }}" class="card-link btn btn-outline-warning">Modifier</a>
+                            {% if app.user == product.publisher or is_granted('ROLE_ADMIN')  %}
+                                <a href="{{ path('app_product_update', {slug: product.slug}) }}" class="card-link btn btn-outline-warning">Modifier</a>
                             {% endif %}
                             {% if is_granted('ROLE_MODERATEUR') %}
                                 <a href="{{ path('app_product_delete', {slug: product.slug}) }}" class="card-link btn btn-outline-danger">Supprimer</a>
                             {% endif %}
                         </div>
-
-
-
 
 
                         </div>
