Fin restitution mercredi : Fini EasyAdmin avec ajout __toString dans Entités

--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -15,10 +15,13 @@
                     <a class="nav-link" href="{{ path('admin_user_list') }}">Liste des Utilisateurs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Créer Catégorie</a>
+                    <a class="nav-link" href="{{ path('category_index') }}">Liste des Catégories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_tag_create') }}">Créer Tags</a>
+                    <a class="nav-link" href="{{ path('app_tags') }}">Liste des Tags</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_tag_create') }}">Créer un Tag</a>
                 </li>
 
 
