--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -12,6 +12,9 @@
                     <a class="nav-link" href="{{ path('app_product_index') }}">Liste des produits</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_product_create') }}">Créer un produit</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('admin_user_list') }}">Liste des Utilisateurs</a>
                 </li>
                 <li class="nav-item">
