--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,4 +2,10 @@
 
 {% block body %}
     <h1>Bonjour (depuis TWIG)</h1>
+
+    {% include 'product/_list.html.twig' with {products : paginatedResults} %}
+
+    <div class="navigation">
+        {{ knp_pagination_render(paginatedResults) }}
+    </div>
 {% endblock %}
